# parquetData

./: .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
adlsParquetData.Lakehouse/: .platform  shortcuts.metadata.json
scripts/: analytics.ipynb  config.py  db_utils.py  main_bronze.py  parquet_loader.py  test_adls.py
src/parquetData/: cli.py  settings.py
src/parquetData/extract/: table_postgres.py
src/parquetData/load/: adls_send.py  parquet_loader.py  parquet_to_postgres.py
src/parquetData/pipeline/: bronze_pipeline.py  gold_pipeline.py  silver_pipeline.py
src/parquetData/transform/: bronze_to_silver.py  silver_to_gold.py
tests/: test_basic.py  test_empty.py  test_errors.py  test_roundtrip.py  test_schema.py
