[project]
name = "parquetData"
version = "0.3.3"
description = "Ferramentas para manipulação e validação de arquivos Parquet"
authors = [
    { name = "IncomeView", email = "contato@incomeview.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "pyarrow",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
parquetdata = "parquetData.cli:cli"
workparquet = "parquetData.cli:cli"